--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 
 .card {
     /* background-color: yellowgreen; */
-    max-width: 600px;
+    max-width: 640px;
     display: flex;
     flex-direction: column;
     border-radius: 30px;
@@ -61,9 +61,45 @@ body {
 
 @media (min-width: 375px) {
     .result {
-        width: 300px;
+        width: 320px;
     }
     
+}
+
+.result__title {
+    font-size: 20px;
+    color: var(--white);
+    opacity: 0.7;
+}
+
+.result__score {
+    width: 170px;
+    height: 170px;
+    background-color: var(--violetBlue);
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.result__score--points {
+    font-size: 60px;
+    font-weight: 800;
+    color: var(--white);
+    margin: 0;
+}
+
+.result__score--total {
+    margin: 0;
+    color: var(--white);
+    opacity: 0.5;
+    font-size: 15px;
+    margin-top: -5px;
+}
+
+.result__word {
+    color: var(--white);
 }
 
 /** Summary **/
@@ -81,7 +117,7 @@ body {
 
 @media (min-width: 375px) {
     .summary {
-        width: 300px;
+        width: 320px;
     }
     
 }
