--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@
     --persianBlue: hsla(241, 72%, 46%, 0);
 
     --white: #fff;
+    --black: #000;
+    --gray: #95949b;
 
     --mainFont: 'Hanken Grotesk', sans-serif;
 }
@@ -123,47 +125,37 @@ body {
 /** Summary **/
 
 .summary {
-    width: 100%;
+    max-width: 100%;
     display: grid;
+    grid-template-columns: 1fr;
     grid-template-rows: 5;
     justify-content: center;
-    /* place-items: center; */
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
+    align-items: center;
     background-color: var(--white);
-    text-align: center;
     border-radius: 30px;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 @media (min-width: 375px) {
     .summary {
         width: 320px;
     }
-    
-}
-
-.summary__category {
-    display: flex;
-    box-sizing: border-box;
-    border-radius: 10px; 
-    font-size: 15px;
-    margin-bottom: 15px;
-    min-width: 100%;
-
 }
 
 .summary__cards {
-    max-width: 100%;
+    padding: 0 35px;
 }
 
-@media (min-width: 375px) {
-    .summary__category {
-        width: 260px;
-    } 
+.summary__category {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-radius: 10px; 
+    font-size: 15px;
+    margin-bottom: 15px;
+    /* min-width: 100%; */
+    font-weight: bold;
 }
 
 .summary__category:nth-of-type(1) {
@@ -187,4 +179,13 @@ body {
 }
 .category__title {
     display: flex;
+}
+
+.summary__category--score {
+    color: var(--black);
+    text-align: end;
+}
+
+.summary__category--score span{
+    color: var(--gray);
 }
