--- a/styles.css
+++ b/styles.css
@@ -35,16 +35,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-color: burlywood; */
 }
 
 /** Card **/
 
 .card {
-    /* background-color: yellowgreen; */
     max-width: 640px;
-    /* display: flex;
-    flex-direction: column; */
     display: grid;
     grid-template-columns: 1fr;
     border-radius: 30px;
@@ -148,11 +144,12 @@ body {
     padding: 20px 35px;
     text-align: center;
     padding-bottom: 35px;
+    gap: 10px;
 }
 
 @media (min-width: 530px) {
     .summary {
-        /* width: 320px; */
+        gap: 0;
     }
 }
 
@@ -162,9 +159,15 @@ body {
 
 .summary__title {
     font-size: 20px;
-    margin: 0;
+    margin-bottom: 20px;
     text-align: left;
     padding: 0;
+}
+
+@media (min-width: 530px) {
+    .summary__title {
+        margin: 0;
+    }
 }
 
 .summary__category {
@@ -173,7 +176,6 @@ body {
     border-radius: 10px; 
     font-size: 15px;
     margin-bottom: 15px;
-    /* min-width: 100%; */
     font-weight: bold;
 }
 
@@ -217,9 +219,13 @@ body {
 
 .summary__button {
     padding: 0;
-    height: 100%;
+    height: 52px;
     text-decoration: none;
     background-color: var(--buttonColor);
     color: var(--white);
     border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
 }
